setup graphqls schema

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.graphql.graphiql.enabled=true
 
+# custom endpoint
+spring.graphql.graphiql.path=/graphql
+
+# set schema location
+spring.graphql.schema.locations=classpath:graphql/
+
+# set file extensions
+spring.graphql.schema.file-extensions=.graphqls,.gqls
