setup simple controller

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.graphql.graphiql.enabled=true
 
 # custom endpoint
-spring.graphql.graphiql.path=/graphql
+spring.graphql.graphiql.path=/graphiql
 
 # set schema location
 spring.graphql.schema.locations=classpath:graphql/
