--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.graphql.schema.locations=classpath:graphql/
 
 # set file extensions
 spring.graphql.schema.file-extensions=.graphqls,.gqls
+
+spring.datasource.url=jdbc:h2:mem:gql_db
+spring.datasource.username=root
+spring.datasource.password=root
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
