add postgresql driver dependency

--- a/dep.env
+++ b/dep.env
@@ -1,3 +1,7 @@
+spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
 spring.graphql.graphiql.enabled=true
 
 # custom endpoint
@@ -9,13 +13,6 @@ spring.graphql.schema.locations=classpath:graphql/
 # set file extensions
 spring.graphql.schema.file-extensions=.graphqls,.gqls
 
-# spring.datasource.url=jdbc:postgresql://postgres:5432/test
-# spring.datasource.username=postgres
-# spring.datasource.password=postgres
-
-spring.datasource.url=jdbc:h2:mem:gql_db
-spring.datasource.username=root
-spring.datasource.password=root
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
