--- a/dep.env
+++ b/dep.env
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/test
+spring.datasource.url=jdbc:postgresql://postgresql:5432/test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
@@ -16,3 +16,8 @@ spring.graphql.schema.file-extensions=.graphqls,.gqls
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
