--- a/env/Dockerfile
+++ b/env/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:latest
 
 WORKDIR "/Apps"
 
-COPY target/*.war /Apps/springboot-graphql.war
+COPY ../target/*.war /Apps/springboot-graphql.war
 
 CMD [ "java", "-jar", "/Apps/springboot-graphql.war" ]
