--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -54,5 +54,6 @@ jobs:
       - name: Build and Push my Docker Image to Docker Hub
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: ${{ secrets.APP_TAG }}:1.1
