--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -15,7 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       # clone to github env
-      - uses: actions/checkout@v1
+      - name: Clone repository to local
+        uses: actions/checkout@v1
 
       # Setup JDK
       - name: Setup JDK Enviroment
@@ -56,3 +57,24 @@ jobs:
           context: .
           push: true
           tags: ${{ secrets.APP_TAG }}:1.1
+  publish:
+    name: Publish App to Server
+    needs: build
+    steps:
+      - name: Clone repository to local
+        uses: action/checkout@v1
+
+      - name: Copy env files to the server
+        uses: sival1024/scp-deployer@latest
+        with:
+          port: 22
+          username: ${{ secrets.SERVER_USERNAME }}
+          host: ${{ secrets.SERVER_HOST }}
+          key: ${{ secrets.SERVER_SECRET_KEY }}
+          source: "./env/*"
+          target: "~/Apps/${{ secrets.APP_TAG }}:1.1"
+
+      - name: Starting container
+        run: |
+          cd ~/Apps/${{ secrets.APP_TAG }}:1.1
+          docker-compose up
