--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -63,7 +63,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Clone repository to local
-        uses: action/checkout@v1
+        uses: actions/checkout@v1
 
       - name: Copy env files to the server
         uses: sival1024/scp-deployer@latest
