--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Copy env files to the server
-        uses: sival1024/scp-deployer@latest
+        uses: siva1024/scp-deployer@latest
         with:
           port: 22
           username: ${{ secrets.SERVER_USERNAME }}
