--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -83,9 +83,8 @@ jobs:
           key: ${{ secrets.SERVER_SECRET_KEY }}
           port: 22
           script: |
-            appDir="irdaislakhuafa/springboot-graphql:1.1"
-            cd ~/Apps/$appDir
+            cd ~/Apps/irdaislakhuafa/springboot-graphql:1.1
             docker-compose down
             docker rm springboot-graphql-v1.1
-            docker rmi $appDir
-            docker compose up -d
+            docker rmi irdaislakhuafa/springboot-graphql:1.1
+            docker-compose up -d
