add prefix user home

--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -83,8 +83,7 @@ jobs:
           key: ${{ secrets.SERVER_SECRET_KEY }}
           port: 22
           script: |
-            # cd "/home/ec2-user/Apps/irdaislakhuafa/springboot-graphql:1.1"
-            echo $(pwd)
+            cd Apps/irdaislakhuafa/springboot-graphql:1.1
             docker-compose down
             docker rm springboot-graphql-v1.1
             docker rmi irdaislakhuafa/springboot-graphql:1.1
