--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -76,13 +76,14 @@ jobs:
           target: "~/Apps/irdaislakhuafa/springboot-graphql:1.1/*"
 
       - name: Starting container on server
-        uses: appleboy/ssh-action@master
+        uses: fifsky/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          user: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SECRET_KEY }}
           port: 22
-          script: |
+          command: |
+            ls -la
             cd Apps/irdaislakhuafa/springboot-graphql:1.1
             docker-compose down
             docker rm springboot-graphql-v1.1
