add prefix user home

--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -86,5 +86,5 @@ jobs:
             ls -la
             cd Apps/irdaislakhuafa/springboot-graphql-v1.1
             ls -la
-            docker-compose down
+            docker-compose stop
             docker-compose up -d
