--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -76,23 +76,16 @@ jobs:
           target: "~/Apps/irdaislakhuafa/springboot-graphql-v1.1/*"
 
       - name: Starting container on server
-        uses: fifsky/ssh-action@master
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.SERVER_HOST }}
-          user: ${{ secrets.SERVER_USERNAME }}
+          username: ${{ secrets.SERVER_USERNAME }}
           key: ${{ secrets.SERVER_SECRET_KEY }}
           port: 22
-          command: |
-            # ls -la
-            # ls -la
+          script: |
             cd Apps/irdaislakhuafa/springboot-graphql-v1.1
-            docker-compose stop
+            docker-compose down
+            docker rm springboot-graphql-v1.1
+            docker rmi irdaislakhuafa/springboot-graphql:1.1
             docker-compose up -d
-            echo "Done success"
-
-            # docker network create gql_network
-            # docker run \
-            #   --rm -d \
-            #   --name psql_gql_v1.1 \
-            #   --network gql_network 
-            #   -p 5432:5432 \
+            ls -la
