--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -84,8 +84,4 @@ jobs:
           port: 22
           script: |
             cd Apps/irdaislakhuafa/springboot-graphql-v1.1
-            docker-compose down
-            docker rm springboot-graphql-v1.1
-            docker rmi irdaislakhuafa/springboot-graphql:1.1
-            docker-compose up -d
-            ls -la
+            ./scripts.sh
