--- a/env/docker-compose.yml
+++ b/env/docker-compose.yml
@@ -10,11 +10,15 @@ services:
       - dep-docker-compose.env
     expose:
       - 8080
+    ports:
+      - 8080
   
   dbms_env: 
     image: postgres:latest
     container_name: postgresql
     ports:
+      - 5432
+    expose:
       - 5432
     environment:
       - POSTGRES_USER=postgres
