--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -43,7 +43,7 @@ jobs:
 
       - name: Packaging with Maven
         run: |
-          mvn package
+          mvn package -DskipTests
 
       - name: Login to My Docker Hub
         uses: docker/login-action@v1
