--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -65,6 +65,16 @@ jobs:
       - name: Clone repository to local
         uses: actions/checkout@v1
 
+      - name: Remove old config
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USERNAME }}
+          key: ${{ secrets.SERVER_SECRET_KEY }}
+          port: 22
+          script: |
+            rm -rfv Apps/irdaislakhuafa/springboot-graphql-v1.1/*
+
       - name: Copy env files to the server
         uses: siva1024/scp-deployer@latest
         with:
