--- a/.github/workflows/springboot-graphql.yml
+++ b/.github/workflows/springboot-graphql.yml
@@ -83,7 +83,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           key: ${{ secrets.SERVER_SECRET_KEY }}
           source: "env/*"
-          target: ~/Apps/irdaislakhuafa/springboot-graphql-v1.1/*
+          target: "~/Apps/irdaislakhuafa/springboot-graphql-v1.1/"
 
       - name: Starting container on server
         # run: ssh -i ${{ secrets.SERVER_SECRET_KEY }} ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_HOST }} "cd Apps/irdaislakhuafa/springboot-graphql-v1.1 && docker-compose down && docker-compose up -d"
